# kiroku

./: pyproject.toml
src/kiroku/: __init__.py  bot.py
