[project]
name = "kiroku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Julia Leirado", email = "julialeirado@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=22.6",
]

[project.scripts]
kiroku = "kiroku:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
